fix(CSS): use height: 0 to hide #modal-container instead of visibility: hidden

--- a/css/style.css
+++ b/css/style.css
@@ -328,27 +328,57 @@ header {
   background: var(--fairy);
 }
 
+
+/*  To hide the #modal-container via CSS there's 3 options with their own pros and cons:
+
+    1. display: none
+    + simple
+    + CSS transitions NOT possible
+    + modal children are focusable
+
+    2. visibility: hidden
+    + complex
+    + CSS transitions are possible
+      (needs complicated setup like:
+            const modalContainer = document.querySelector('#modal-container');
+            modalContainer.classList.add('is-visible');
+
+            setTimeout(() => {
+              const modal = document.querySelector('.modal');
+              modal.classList.add('is-visible');
+            }, 0);
+      or else the child transitions are not triggered)
+    + modal children NOT focusable
+
+    3. height: 0
+    + relatively easy
+    + CSS transitions are possible (using a delay on animating height)
+    + modal children are focusable
+
+    After a lot of testing, option 3 seems to be the best fit so we use that in our CSS.
+*/
+
 #modal-container {
   align-items: center;
   background: rgba(0, 0, 0, 0.5);
   display: grid;
-  height: 100%;
+  height: 0;
   justify-items: center;
   left: 0;
   overflow: auto;
   padding: 20px;
   position: fixed;
   top: 0;
-  transition: all 0.25s ease-in-out;
+  transition: height 0ms 0.25s, opacity 0.25s 0ms ease-in-out;
   opacity: 0;
   width: 100%;
-  visibility: hidden;
   z-index: 999;
 }
 
 #modal-container.is-visible {
-  visibility: visible;
+  height: 100%;
   opacity: 1;
+  transition: height 0ms 0ms, opacity 0.25s 0ms ease-in-out;
 }
 
 .modal {
